--- a/PetHero/package.json
+++ b/PetHero/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "3": "^2.1.0",
     "react": "18.1.0",
-    "react-native": "0.70.1"
+    "react-native": "^0.70.1",
+    "react-native-gesture-handler": "^2.6.2",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
