--- a/PetHero/package.json
+++ b/PetHero/package.json
@@ -14,7 +14,8 @@
     "react": "18.1.0",
     "react-native": "^0.70.1",
     "react-native-gesture-handler": "^2.6.2",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -24,6 +25,7 @@
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
