--- a/PetHero/package.json
+++ b/PetHero/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "3": "^2.1.0",
+    "axios": "^1.2.0",
     "react": "18.1.0",
     "react-native": "^0.70.1",
     "react-native-gesture-handler": "^2.6.2",
